fixing last merge issue

--- a/index.html
+++ b/index.html
@@ -185,15 +185,15 @@
                                     </div>
                                     <input class="productDetailsIcon" type="button" data-icon="search" data-iconpos="notext" data-theme="a" />
                                 </div>
-                                <input class="productDetailsIcon" type="button" data-icon="search" data-iconpos="notext" data-theme="a" />
-                            </div>
-                            <div class="productDetails">
-                                <div class="title"></div>
-                                <div class="numKids"><span></span> kids saving for this</div>
+                                <div class="productDetails">
+                                    <div class="title"></div>
+                                    <div class="numKids"><span></span> kids saving for this</div>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                </div><!-- END productCatalog-->
+                    </div><!-- END productCatalog-->
+                </div><!-- END addGoalContent -->
+                
             </div><!-- END cover -->
             
             <!-- start footer -->
