a little styling on the empty state for search results

--- a/index.html
+++ b/index.html
@@ -138,9 +138,9 @@
                         <div class="taskCatalog">
                             <div class="title">Popular tasks for <span class="childAge">[#]</span> year old <span class="childGender">[gender]</span>s</div>
                             <div class="tasks"></div>
-                            <div class="tasksNoResults">
+                            <div class="tasksNoResults" data-role="content">
                                 <p>Nothing in our catalog matches <span class="taskSearchTerm"></span></p>
-                                <p><a href="#createTask">Create your own item</a></p>
+                                <p><a href="#createTask">Create your own task</a></p>
                             </div>
 
                             <!-- Task HTML template for populating the UI from the DB -->
