clearing filter field

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                             <form method="post" id="addTasksForm" data-role="content">
                                 <label class="title" for="addTasksFormTaskName">What do you want <span class="childFirstName">[firstName]</span> to do?</label>
                                 <div class="ui-grid-a">
-                                    <div class="ui-block-a">
+                                    <div class="ui-block-a" id="taskFilterContainer">
                                         <input type="text" id="addTasksFormTaskName" data-theme="c" placeholder="Type here to create your own" data-clear-btn="true" data-path=".title" data-control-type="textbox" data-control-name="title-filter" data-control-action="filter" />
                                     </div>
                                     <div class="ui-block-b">
@@ -138,6 +138,7 @@
                         <!-- Task Catalog of recommended tasks for age/gender -->
                         <div class="taskCatalog">
                             <div class="title">Popular tasks for <span class="childAge">[#]</span> year old <span class="childGender">[gender]</span>s</div>
+                            <div class="altTitle">Matches from our catalog <span class="backToPopularTasks">Danny Zuko</span></div>
                             <div class="tasks"></div>
                             <div class="tasksNoResults" data-role="content">
                                 <p>Nothing in our catalog matches <span class="taskSearchTerm"></span></p>
