--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <link rel="stylesheet" href="css/vendor/jquery.mobile.structure-1.3.1.css">
 
         <!-- please keep this last -->
+        <link rel="stylesheet" href="css/jqmOverrides.css">
         <link rel="stylesheet" href="css/onboardingFlow.css">
         <!-- /please keep this last -->
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
