danny zuko has left the building

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                         <!-- Task Catalog of recommended tasks for age/gender -->
                         <div class="taskCatalog">
                             <div class="title">Popular tasks for <span class="childAge">[#]</span> year old <span class="childGender">[gender]</span>s</div>
-                            <div class="altTitle">Matches from our catalog <span class="backToPopularTasks">Danny Zuko</span></div>
+                            <div class="altTitle">Matches from our catalog <span class="backToPopularTasks">Clear</span></div>
                             <div class="tasks"></div>
                             <div class="tasksNoResults" data-role="content">
                                 <p>Nothing in our catalog matches <span class="taskSearchTerm"></span></p>
