--- a/index.html
+++ b/index.html
@@ -191,7 +191,13 @@
                         <!-- Product Catalog of recommended products for age/gender -->
                         <div class="productCatalog clearfix">
                             <div class="title">Popular Goals for <span class="childAge">[#]</span> year old <span class="childGender">[gender]</span>s</div>
+                            <div class="altTitle">Matches from our catalog <span class="backToPopularProducts">Clear</span></div>
+
                             <div class="products"></div>
+                            <div class="productsNoResults" data-role="content">
+                                <p>Nothing in our catalog matches <span class="productSearchTerm"></span></p>
+                                <p><a href="#configureProducts" data-role="button" data-rel="popup" data-position-to="window" class="createNewProduct">Create your own goal</a></p>
+                            </div>
 
                             <!-- Product HTML template for populating the UI from the DB -->
                             <div class="productTemplate">
