added productId data attr to the add button

--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                     <div class="details">
                         <div class="title"></div>
                         <div class="desc"></div>
-                        <input type="button" data-theme="b" value="ADD TO WISHLIST" data-inline="true" />
+                        <input type="button" class="addProductButton" data-theme="b" value="ADD TO WISHLIST" data-inline="true" />
                     </div>
                 </div>
                 <div class="bottom">
