fixed product details search icon

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                                         <div class="verticalMiddle">
                                             <img class="thumbnail" />
                                         </div>
-                                        <input class="productDetailsIcon" type="button" data-icon="search" data-iconpos="notext" data-theme="a" />
+                                        <img class="productDetailsIcon" src="img/magnifyingGlass.png" />
                                     </div>
                                     <div class="productDetails">
                                         <div class="title"></div>
