added price and some title styling

--- a/index.html
+++ b/index.html
@@ -314,6 +314,7 @@
                     </div>
                     <div class="details">
                         <div class="title"></div>
+                        <div class="price"></div>
                         <div class="desc"></div>
                         <input type="button" class="addProductButton" data-theme="b" value="ADD TO WISHLIST" data-inline="true" />
                     </div>
