vertical centering of image

--- a/index.html
+++ b/index.html
@@ -306,8 +306,8 @@
                 <a href="#" data-rel="back" data-role="button" data-theme="b" data-icon="delete" data-iconpos="notext" class="ui-btn-right">Close</a>
                 <div class="taskContent clearfix" data-role="content">
                     <div class="images">
-                        <div class="mainImage">
-                            <img src="" />
+                        <div class="mainImage verticalWrapper">
+                            <div class="verticalMiddle"><img src="" /></div>
                         </div>
                         <div class="altImages">
                         </div>
