alt images working now in product details popups

--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
                         <div class="mainImage verticalWrapper">
                             <div class="verticalMiddle"><img src="" /></div>
                         </div>
-                        <div class="altImages">
+                        <div class="altImages clearfix">
                         </div>
                     </div>
                     <div class="details">
