first pass at estimated time to earn based on weekly allowance.  based on daily and weekly breakdown also checked in but commented out for now.

--- a/index.html
+++ b/index.html
@@ -314,7 +314,10 @@
                     </div>
                     <div class="details">
                         <div class="title"></div>
-                        <div class="price"></div>
+                        <div class="moneyTime">
+                            <span class="price"></span>
+                            <span class="timeToEarn"><span class="time"></span> to earn</span>
+                        </div>
                         <div class="desc"></div>
                         <input type="button" class="addProductButton" data-theme="b" value="ADD TO WISHLIST" data-inline="true" />
                     </div>
