added a tooltip to time to earn

--- a/index.html
+++ b/index.html
@@ -316,7 +316,10 @@
                         <div class="title"></div>
                         <div class="moneyTime">
                             <span class="price"></span>
-                            <span class="timeToEarn"><span class="time"></span> to earn</span>
+                            <span class="timeToEarn">
+                                <span class="time"></span> to earn
+                                <span class="timeToEarnTooltip">Based on the currently set allowance of $<span class="allowance"></span> per week.</span>
+                            </span>
                         </div>
                         <div class="desc"></div>
                         <input type="button" class="addProductButton" data-theme="b" value="ADD TO WISHLIST" data-inline="true" />
