adding another state to the footer to move on from setting goals and to allow review

--- a/index.html
+++ b/index.html
@@ -343,8 +343,12 @@
                     <input type="button" id="doneWithTasksButton" data-theme="b" value="Done setting Tasks" data-icon="arrow-r" data-iconpos="right" data-inline="true" />
                 </div>
                 <div  class="startGoalsFooter">
+                    When you&rsquo;re done adding Goals, review the whole picture with <span class="childFirstName">[childName]</span>.
+                    <input type="button" id="doneWithGoalsButton" data-theme="b" value="Let's Review!" data-icon="arrow-r" data-iconpos="right" data-inline="true" />
+                </div>
+                <div  class="finishSetupFooter">
                     Once you and <span class="childFirstName">[childName]</span> have agreed your selections, your account is ready to use.
-                    <input type="button" id="doneWithGoalsButton" data-theme="b" value="Finish and Activate" data-icon="arrow-r" data-iconpos="right" data-inline="true" />
+                    <input type="button" id="signAgreementButton" data-theme="b" value="Finish and Activate" data-icon="arrow-r" data-iconpos="right" data-inline="true" />
                 </div>
             </div> <!-- end footer -->
 
