added buttons for adding new goals and tasks, set to disabled at first but enabled on the review screen

--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
                 <div class="ui-block-a">
                     <div data-role="content" class="header ui-bar-a">
                         <div class="sectionTitle">Tasks &amp; Pay</div>
+                        <a data-role="button" class="addButton ui-disabled" id="addTasksButton" data-theme="b" data-inline="true" data-icon="plus">Add Task</a>
                         <div class="subTitle">How <span class="childFirstName">[firstName]</span> will earn money</div>
                     </div>
                     <div data-role="content" class="setAllowance">
@@ -111,6 +112,7 @@
                 <div class="ui-block-b">
                     <div data-role="content" class="header ui-bar-a">
                         <div class="sectionTitle">Goals</div>
+                        <a data-role="button" class="addButton ui-disabled" id="addGoalsButton" data-theme="b" data-inline="true"  data-icon="plus">Add Goal</a>
                         <div class="subTitle">What <span class="childFirstName">[firstName]</span> will save for</div>
                     </div>
                 </div>
