--- a/index.html
+++ b/index.html
@@ -180,12 +180,19 @@
                             <form method="post" id="addGoalForm" data-role="content">
                                 <label class="title" for="addGoalFormGoalName">What would motivate <span class="childFirstName">[firstName]</span>?</label>
                                 <div class="ui-grid-a">
-                                    <div class="ui-block-a">
+                                    <div class="ui-block-a" id="productFilterContainer">
                                         <input type="text" id="addGoalFormGoalName" data-theme="c" data-clear-btn="true" placeholder="Product / charity / save" data-path=".title" data-control-type="textbox" data-control-name="title-product-filter" data-control-action="filter" />
                                     </div>
                                     <div class="ui-block-b">
                                         <a data-role="button" href="#configureNewProduct" data-rel="popup" data-theme="a" data-position-to="window" class="createNewGoal ui-disabled">Configure</a>
                                     </div>
+                                </div>
+                                <div class="drop-down" data-control-type="drop-down" data-control-name="sort" data-control-action="sort" style="display:none">
+                                    <ul>
+                                        <li><span data-path="default">Sort by</span></li>
+                                        <li><span data-path=".numPpl" data-order="desc" data-type="number" data-path="default">Num People desc</span></li>
+                                        <li><span data-path=".numPpl" data-order="asc" data-type="number">Num People asc</span></li>
+                                    </ul>
                                 </div>
                             </form>
                         </div>
@@ -212,7 +219,7 @@
                                     </div>
                                     <div class="productDetails">
                                         <div class="title"></div>
-                                        <div class="numKids"><span></span> kids saving for this</div>
+                                        <div class="numKids"><span class="numPpl"></span> kids saving for this</div>
                                     </div>
                                 </div>
                             </div>
