Changes to js to swap popular products & whole catalog

--- a/index.html
+++ b/index.html
@@ -202,6 +202,8 @@
                             <div class="title">Popular Goals for <span class="childAge">[#]</span> year old <span class="childGender">[gender]</span>s</div>
                             <div class="altTitle">Matches from our catalog <span class="backToPopularProducts">Clear</span></div>
 
+                            <div class="popularProducts"></div>
+
                             <div class="products">
 
                                 <div class="productItem clearfix" data-productid="0" data-ageMin="3"  data-ageMax="12"  data-gender="b">
@@ -285,7 +287,7 @@
                                 <div class="productItem clearfix" data-productid="6" data-ageMin="7"  data-ageMax="12"  data-gender="b">
                                     <div class="productImage verticalWrapper">
                                         <div class="verticalMiddle">
-                                            <img class="thumbnail" src="http://ecx.images-amazon.com/images/I/31CTobGlVHL._SX38_SY50_CR,0,0,38,50_.jpg" alt="8 Nebula Plasma Ball"">
+                                            <img class="thumbnail" src="http://ecx.images-amazon.com/images/I/31CTobGlVHL._SX38_SY50_CR,0,0,38,50_.jpg" alt="8 Nebula Plasma Ball">
                                         </div>
                                         <img class="productDetailsIcon" src="img/magnifyingGlass.png">
                                     </div>
@@ -480,7 +482,7 @@
                                 <div class="productItem clearfix" data-productid="21" data-ageMin="5"  data-ageMax="12"  data-gender="f">
                                     <div class="productImage verticalWrapper">
                                         <div class="verticalMiddle">
-                                            <img class="thumbnail" src="http://ecx.images-amazon.com/images/I/41YwvCfRvOL.jpg" alt="CHARM IT! I Lost a Tooth" Tooth Heart Charm"">
+                                            <img class="thumbnail" src="http://ecx.images-amazon.com/images/I/41YwvCfRvOL.jpg" alt="CHARM IT! I Lost a Tooth Tooth Heart Charm">
                                         </div>
                                         <img class="productDetailsIcon" src="img/magnifyingGlass.png">
                                     </div>
@@ -584,7 +586,7 @@
                                 <div class="productItem clearfix" data-productid="29" data-ageMin="10"  data-ageMax="12"  data-gender="f">
                                     <div class="productImage verticalWrapper">
                                         <div class="verticalMiddle">
-                                            <img class="thumbnail" src="http://ecx.images-amazon.com/images/I/51jWYmyXcAL._SX385_.jpg" alt="6 piece Swimsuit Set Fits 18 American Girl Doll Clothes"">
+                                            <img class="thumbnail" src="http://ecx.images-amazon.com/images/I/51jWYmyXcAL._SX385_.jpg" alt="6 piece Swimsuit Set Fits 18 American Girl Doll Clothes">
                                         </div>
                                         <img class="productDetailsIcon" src="img/magnifyingGlass.png">
                                     </div>
@@ -874,6 +876,7 @@
                             </div>
 
                             <!-- Product HTML template for populating the UI from the DB -->
+                            <!-- This must be kept in sync with the "convertProductCSVJSON.js" file -->
                             <div class="productTemplate">
                                 <div class="productItem clearfix">
                                     <div class="productImage verticalWrapper">
