initially adding selected products to the goals list

--- a/index.html
+++ b/index.html
@@ -115,6 +115,8 @@
                         <a data-role="button" class="addButton ui-disabled" id="addGoalsButton" data-theme="b" data-inline="true"  data-icon="plus">Add Goal</a>
                         <div class="subTitle">What <span class="childFirstName">[firstName]</span> will save for</div>
                     </div>
+                    <div class="selectedProducts">
+                    </div>
                 </div>
             
             </div><!-- END 2-col layout -->
@@ -892,6 +894,23 @@
                                     </div>
                                 </div>
                             </div>
+
+                            <!-- Template for adding products to a child -->
+                            <div class="addProductTemplate">
+                                <div class="productItem clearfix">
+                                    <div class="productImage verticalWrapper">
+                                        <div class="verticalMiddle">
+                                            <img class="thumbnail" />
+                                        </div>
+                                        <img class="productDetailsIcon" src="img/magnifyingGlass.png" />
+                                    </div>
+                                    <div class="productDetails">
+                                        <div class="productTitle"></div>
+                                        <div class="timeToEarn"><span class="time"></span> to earn</div>
+                                    </div>
+                                </div>
+                            </div>
+                            
                         </div><!-- END productCatalog-->
                     </div><!-- END addGoalContent -->
                 </div><!-- /filterlistProductContent -->
