a little more headway on showing and dismissing add panels again.  just need to reposition selectedTasks view when adding tasks still

--- a/index.html
+++ b/index.html
@@ -1035,17 +1035,25 @@
 
             <!-- start footer -->
             <div data-role="footer" class="ui-bar">
-                <div class="startTasksFooter">
+                <div class="startTasksFooter footerBar">
                     After you have added some tasks and reviewed pay, move on to set some goals
                     <input type="button" id="doneWithTasksButton" data-theme="b" value="Done setting Tasks" data-icon="arrow-r" data-iconpos="right" data-inline="true" />
                 </div>
-                <div  class="startGoalsFooter">
+                <div  class="startGoalsFooter footerBar">
                     When you&rsquo;re done adding Goals, review the whole picture with <span class="childFirstName">[childName]</span>.
                     <input type="button" id="doneWithGoalsButton" data-theme="b" value="Let's Review!" data-icon="arrow-r" data-iconpos="right" data-inline="true" />
                 </div>
-                <div  class="finishSetupFooter">
+                <div  class="finishSetupFooter footerBar">
                     Once you and <span class="childFirstName">[childName]</span> have agreed your selections, your account is ready to use.
                     <input type="button" id="signAgreementButton" data-theme="b" value="Finish and Activate" data-icon="arrow-r" data-iconpos="right" data-inline="true" />
+                </div>
+                <div  class="doneAddingTasks footerBar">
+                    When you're done adding Tasks
+                    <input type="button" class="returnToReviewButton" data-theme="b" value="Return to Review" data-icon="arrow-r" data-iconpos="right" data-inline="true" />
+                </div>
+                <div  class="doneAddingGoals footerBar">
+                    When you're done adding Goals
+                    <input type="button" class="returnToReviewButton" data-theme="b" value="Return to Review" data-icon="arrow-r" data-iconpos="right" data-inline="true" />
                 </div>
             </div> <!-- end footer -->
 
