some pretty base bars for filling up with completion

--- a/index.html
+++ b/index.html
@@ -1356,6 +1356,11 @@
                                     <div class="productDetails">
                                         <div class="productTitle"></div>
                                         <div class="price"></div>
+                                        <div class="completionBar">
+                                            <div class="bar">
+                                                <span class="percent"><span>0</span>%</span>
+                                            </div>
+                                        </div>
                                         <div class="timeToEarn"><span class="time"></span> to earn</div>
                                     </div>
                                 </div>
