--- a/index.html
+++ b/index.html
@@ -18,12 +18,11 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
 
-        <!-- <link rel="stylesheet" href="themes/basic/basicTheme.min.css" /> -->
         <link rel="stylesheet" href="themes/tykoon2.2/tykoon2.2.min.css" />
-        <!-- <link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.1/jquery.mobile.structure-1.3.1.css"> -->
         <link rel="stylesheet" href="css/vendor/jquery.mobile.structure-1.3.1.css">
 
         <!-- please keep this last -->
+        <!-- <link rel="stylesheet" href="fonts/MyFontsWebfontsKit.css"> -->
         <link rel="stylesheet" href="css/jqmOverrides.css">
         <link rel="stylesheet" href="css/onboardingFlow.css">
         <!-- /please keep this last -->
