updated completion bars

--- a/index.html
+++ b/index.html
@@ -1356,9 +1356,8 @@
                                         <div class="productTitle"></div>
                                         <div class="price"></div>
                                         <div class="completionBar">
-                                            <div class="bar">
-                                                <span class="percent"><span>0</span>%</span>
-                                            </div>
+                                            <div class="bar"></div>
+                                            <div class="percent"><span>0</span>% earned</div>
                                         </div>
                                         <div class="timeToEarn"><span class="time"></span> to earn</div>
                                     </div>
