fixing dollar decimals

--- a/index.html
+++ b/index.html
@@ -1438,7 +1438,7 @@
                             <div class="taskNonRepeatPaymentDetails">
                                 <p class="money">
                                     <label for="configureTasksHowMuch">How Much?</label>
-                                    <input type="number" id="configureTasksHowMuch">
+                                    <input type="number" step="any" min="0" id="configureTasksHowMuch" />
                                     <div class="error" id="enterTaskMoney">Please enter how much</div>
                                 </p>
                                 <p class="resp">It's nice to help out just because</p>
